--- a/index.html
+++ b/index.html
@@ -132,7 +132,7 @@
       <section class="welcome">
         <h1 class="page-title">
           <span class="page-title-accent">Hi Yaroslav,</span>
-          Welcome into Cat CRM Dashboard
+          Welcome to Cat CRM Dashboard
         </h1>
         <button class="welcome-btn btn btn--primary" type="button">
           <svg class="btn-icon" width="16" height="16">
